adding admin entity in database and implementation the autentication of admin

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ SEQUELIZE_USER=postgres
 SEQUELIZE_PASS=qwe123
 SEQUELIZE_DATABASE=postgres
 
+JWT_SECRET_KEY=ponha-sua-key-aqui
+JWT_EXPIRES_IN=7d
+
 NODE_ENV=development
 
 API_PORT=3333
